// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// These are the messages that get persisted - the events, plus the current
// state (CartState) for snapshots.

// tag::declarations[]
syntax = "proto3";

package shopping.cart.domain;

option java_outer_classname = "ShoppingCartDomain";

// end::declarations[]

// tag::state[]
message CartState {
  repeated LineItem items = 1;
}

message LineItem {
  string productId = 1;
  string name = 2;
  int32 quantity = 3;
}
// end::state[]


// tag::events[]
message ItemAdded {
  LineItem item = 1;
}

message ItemRemoved {
  string productId = 1;
}
// end::events[]